bk_ida/gccida/c0/draw_edge
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/draw_edge/src/graph.c:639:10: error: use of undeclared identifier 'arg0'
color = &arg0; 
         ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/draw_edge/src/obj/graph.o] Error 1
